force-app/main/default/objects/Fulfillment_Line_Item__c/Fulfillment_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Fulfillment Line Item</label>
    <nameField>
        <displayFormat>LI-{00000}</displayFormat>
        <label>Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillment Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>