force-app/main/default/objects/Fulfillment_Line_Item__c/fields/Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfillment</label>
    <referenceTo>Fulfillment__c</referenceTo>
    <relationshipLabel>Fulfillment Line Items</relationshipLabel>
    <relationshipName>Fulfillment_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>