force-app/main/default/objects/Fulfillment_Line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Fulfillment Line Items</relationshipLabel>
    <relationshipName>Fulfillment_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>